<resources>

    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="app_name">百分网</string>
    <string name="no">否</string>
    <string name="errorcode">错误代码</string>
    <string name="yes">是</string>
    <string name="done">确定</string>
    <string name="msg_you_want_quit">您确定要退出吗？</string>
    <string name="dlg_press_again_to_exit_the_program">再按一次退出程序</string>
    <string name="toast_msg_delete_success">删除成功！</string>
    <string name="error_net_dic_file_size">SD卡空间不足,无法完成下载</string>
    <string name="toast_msg_add_success">添加成功！</string>
    <string name="toast_msg_operate_fail">操作失败！</string>
    <string name="toast_msg_add_download_queue">已加入到下载队列中</string>
    <string name="toast_msg_dic_download_fail">下载失败,请稍候再试</string>
    <string name="toast_msg_dic_download_success">下载完成！</string>
    <string name="toast_msg_net_connect_fail">网络连接失败</string>
    <string name="toast_msg_file_size_fail">获取网络文件大小失败</string>
    <string name="toast_msg_create_file_fail">创建文件失败,请检查SD卡空间是否已满</string>
    <string name="toast_msg_dic_download_start">下载已经启动!</string>
    <string name="toast_msg_dic_download_error">未找到相应的下载地址,请清空网络缓存后在试.</string>
    <string name="toast_msg_dic_version_fail">当前版本不支持该词典下载.请升级到最新版！</string>
    <string name="toast_msg_no_network">未找到网络,请稍候再试!</string>
    <string name="toast_msg_unknown_error">未知错误,请稍候再试!</string>
    <string name="toast_msg_unknown_SD_error">未找到SD卡,无法完成下载功能!</string>
    <string name="D_UNKNOWN">未知</string>
    <string name="D_INIT">未下载</string>
    <string name="D_PAUSE">暂停</string>
    <string name="D_DOWNLOAD">下载</string>
    <string name="D_DOWNLOADING">已下载:</string>
    <string name="aboutContent">百分网安卓客户端目前处于测试阶段，如有问题与意见，请反馈给我们！谢谢您的支持！</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="table_text_index1">推荐</string>
    <string name="table_text_index2">搜索</string>
    <string name="table_text_index3">下载</string>
    <string name="table_text_index4">更新</string>
    <string name="table_text_index5">更多</string>
    <string name="table_text_up1">软件</string>
    <string name="table_text_up2">游戏</string>
    <string name="table_text_up3">专题</string>
    <string name="table_text_up4">壁纸</string>
    <string name="table_text_cent1">精品推荐</string>
    <string name="table_text_cent2">装机必备</string>
    <string name="search_text_top">应用搜索</string>
    <string name="search_text_hot">搜索热词榜</string>
    <string name="down_text_top">下载管理</string>
    <string name="down_text_left">正在下载</string>
    <string name="down_text_right">已经下载</string>
    <string name="new_text_top">更新管理</string>
    <string name="new_text_button">全部更新</string>
    <string name="more_text_top">更多</string>
    <string name="more_text_list1">关于</string>
    <string name="more_Feebback">反馈</string>
    <string name="soft_text_top">软件</string>
    <string name="soft_text_tab1">推荐</string>
    <string name="soft_text_tab2">最新</string>
    <string name="soft_text_tab3">排行</string>
    <string name="soft_text_tab4">分类</string>
    <string name="soft_text_tab5">周排行</string>
    <string name="soft_text_tab6">月排行</string>
    <string name="soft_text_tab7">总排行</string>
    <string name="game_text_top">游戏</string>
    <string name="spical_text_top">专题</string>
    <string name="spical_text_tab1">推荐专题</string>
    <string name="spical_text_tab2">最新专题</string>
    <string name="pd_loading">正在加载......</string>
    <string name="net_faile">网络请求失败</string>
    <string name="soft_down_times">次下载</string>
    <string name="times">时间：</string>
    <string name="application">个应用</string>
    <string name="product_description_tab1">简介</string>
    <string name="product_feedback_tab2">评论</string>
    <string name="product_about_tab2">相关</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>