<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toptab_noline_bg"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/product_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/btback" />
              <ImageView
                  	android:id="@+id/product_logo"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/deflogo" />
                <TextView
                    android:id="@+id/product_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/soft_text_top"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toptab_head_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:orientation="horizontal"
            android:background="#00000000" >

            <Button
                android:id="@+id/product_tab1_description"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/toptab_bg_soft"
                
                android:paddingTop="10dip"
                android:text="@string/product_description_tab1"
                android:textColor="@color/toptab_TextColor_normal"
                android:textSize="18dip" />

            <ImageView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dip"
                android:layout_marginTop="3dip"
                android:background="#ffdadee0" />

            <Button
                android:id="@+id/product_tab2_feedback"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/toptab_bg_soft"
                android:paddingTop="10dip"
                android:text="@string/product_feedback_tab2"
                android:textColor="@color/toptab_TextColor_normal"
                android:textSize="18dip" />

            <ImageView
                android:layout_width="1dip"
                android:layout_height="wrap_content"
                android:paddingBottom="3dip"
                android:paddingTop="3dip"
                android:background="#ffdadee0" />

            <Button
                android:id="@+id/product_tab3_about"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/toptab_bg_soft"
                android:paddingTop="10dip"
                android:text="@string/product_about_tab2"
                android:textColor="@color/toptab_TextColor_normal"
                android:textSize="18dip" />
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpagerLayout"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
             
            <!-- <com.work.market.view.ProductDetailView.ProductDetailView
                android:id="@+id/product_detail_view"
            	android:layout_width="fill_parent"
            	android:layout_height="0dp"
            	android:layout_weight="1"
            /> -->
        </android.support.v4.view.ViewPager>
    </LinearLayout>

</RelativeLayout>