<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#ffdadee0" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="5dp"
            android:background="@drawable/toptab_noline_bg"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/softpaixu_rank_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/toptab_bg_soft_paixu"
                android:paddingBottom="15dip"
                android:paddingTop="15dip"
                android:text="@string/soft_text_tab5"
                android:textColor="@color/toptab_TextColor_normal"
                android:textSize="15dip" />

            <ImageView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dip"
                android:layout_marginTop="3dip"
                android:background="#ffdadee0" />

            <Button
                android:id="@+id/softpaixu_rank_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/toptab_bg_soft_paixu"
                android:paddingBottom="15dip"
                android:paddingTop="15dip"
                android:text="@string/soft_text_tab6"
                android:textColor="@color/toptab_TextColor_normal"
                android:textSize="15dip" />

            <ImageView
                android:layout_width="1dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dip"
                android:layout_marginTop="3dip"
                android:background="#ffdadee0" />

            <Button
                android:id="@+id/softpaixu_rank_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/toptab_bg_soft_paixu"
                android:paddingBottom="15dip"
                android:paddingTop="15dip"
                android:text="@string/soft_text_tab7"
                android:textColor="@color/toptab_TextColor_normal"
                android:textSize="15dip" />
        </LinearLayout>
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toptab_head_line" />
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/whites" >

            <com.work.market.view.SoftlistView
                android:id="@+id/m_SoftlistView_week"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
            </com.work.market.view.SoftlistView>

            <com.work.market.view.SoftlistView
                android:id="@+id/m_SoftlistView_all"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="gone" >
            </com.work.market.view.SoftlistView>

            <com.work.market.view.SoftlistView
                android:id="@+id/m_SoftlistView_month"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="gone" >
            </com.work.market.view.SoftlistView>
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>